# c2pa_text_personal

./: README.md
.cargo-home/: .global-cache
.cargo-home/registry/cache/index.crates.io-1949cf8c6b5b557f/: abnf-0.13.0.crate  abnf-core-0.5.0.crate  asn1-rs-0.7.2.crate  assert_cmd-2.2.2.crate  async-generic-1.1.2.crate  atree-0.5.4.crate  bitvec-nom2-0.2.1.crate  btree-range-map-0.7.2.crate  btree-slab-0.6.1.crate  bumpalo-3.20.3.crate  byteordered-0.6.0.crate  c2pa-text-2.0.0.crate  cc-traits-2.0.0.crate  codspeed-4.7.0.crate  codspeed-criterion-compat-4.7.0.crate  codspeed-criterion-compat-walltime-4.7.0.crate  const-hex-1.19.1.crate  coset-0.4.2.crate  delegate-0.8.0.crate  dhat-0.3.3.crate  displaydoc-0.2.6.crate  ecb-0.1.2.crate  etcetera-0.11.0.crate  extfmt-0.2.0.crate  fancy-regex-0.17.0.crate  fraction-0.15.4.crate  fragile-2.1.0.crate  futures-timer-3.0.4.crate  gif-0.14.2.crate  hex-literal-1.1.0.crate  http-1.4.1.crate  hyper-1.10.0.crate  id3-1.17.0.crate  img-parts-0.4.0.crate  iref-3.2.2.crate  iref-core-3.2.2.crate  jfifdump-0.6.0.crate  jiff-0.2.27.crate  jiff-static-0.2.27.crate  jiff-tzdb-0.1.6.crate  (+56 more)
.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/abnf-0.13.0/: .cargo_vcs_info.json  Cargo.toml
.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/abnf-core-0.5.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/asn1-rs-0.7.2/: .cargo_vcs_info.json  Cargo.toml
.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/codspeed-4.7.0/instrument-hooks/example/: BUILD  CMakeLists.txt  MODULE.bazel  main.c
.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/codspeed-4.7.0/instrument-hooks/example/instrument-hooks/includes/: core.h
.github/workflows/: benchmarks.yml  library-release.yml  release.yml  tier-1a.yml
docs/: text-c2pa-loadjs-plan.md  text-c2pa-loadjs-plan.zh-CN.md
sdk/: Cargo.toml
sdk/tests/: test_builder.rs
(+537 files in other folders)
